--- a/source/CustomControls/SearchBox.xaml
+++ b/source/CustomControls/SearchBox.xaml
@@ -14,12 +14,14 @@
                             CornerRadius="{DynamicResource ControlCornerRadius}">
                         <Grid>
                             <ContentControl x:Name="PART_SeachIcon"
+                                            IsHitTestVisible="False"
                                         ContentTemplate="{DynamicResource SearchTextIconTemplate}"
                                         VerticalAlignment="Center" HorizontalAlignment="Left" Margin="5,0,0,0"
                                         Foreground="{DynamicResource TextBrushDarker}" />
                             <TextBox x:Name="PART_TextInpuText" Background="Transparent" BorderThickness="0"
                                  VerticalContentAlignment="Center" Padding="5,0,25,0"/>
                             <ContentControl x:Name="PART_ClearTextIcon"
+                                            Cursor="Hand"
                                         ContentTemplate="{DynamicResource ClearTextIconTemplate}" 
                                         FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,5,0" 
                                         Foreground="{DynamicResource TextBrushDarker}" />
