--- a/source/CustomControls/FilterSelectionBox.xaml
+++ b/source/CustomControls/FilterSelectionBox.xaml
@@ -22,6 +22,7 @@
                                Margin="5,0,0,0"/>
                 </DockPanel>
                 <ToggleButton x:Name="MainToggle"
+                              Cursor="Hand"
                               BorderThickness="0" Focusable="False"
                               HorizontalContentAlignment="Stretch"
                               Background="Transparent">
