--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -268,7 +268,7 @@
                                             </StackPanel.Style>
                                             <TextBlock Text="{DynamicResource LOCExtra_Metadata_Loader_VideoLabel}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
-                                            <Separator Background="{DynamicResource PanelSeparatorBrush}" Margin="0,5,0,5" />
+                                            <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                             <Grid>
                                                 <!--Rectangle used to expand the panel while the video loads-->
                                                 <Viewbox Stretch="Uniform" Visibility="{Binding ElementName=VideoFeed, Path=Visibility}">
@@ -283,7 +283,7 @@
                                                     Margin="5,25,5,0">
                                             <TextBlock Text="{DynamicResource LOCNotesLabel}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
-                                            <Separator Background="{DynamicResource PanelSeparatorBrush}" Margin="0,5,0,5" />
+                                            <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                             <TextBox Name="PART_TextNotes" IsReadOnly="True"
                                                      BorderThickness="0"
                                                      AcceptsReturn="True" TextWrapping="Wrap"
@@ -294,7 +294,7 @@
                                                     Margin="5,25,5,0">
                                             <TextBlock Text="{DynamicResource LOCGameDescriptionTitle}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
-                                            <Separator Background="{DynamicResource PanelSeparatorBrush}" Margin="0,5,0,5" />
+                                            <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                             <HtmlTextView Name="PART_HtmlDescription"
                                                           HtmlFontSize="{DynamicResource FontSize}"
                                                           HtmlFontFamily="{DynamicResource FontFamily}"
@@ -438,7 +438,7 @@
                                             </StackPanel.Style>
                                             <TextBlock Text="{DynamicResource LOC_NewsViewer_NewsViewerControl_NewsLabel}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
-                                            <Separator Background="{DynamicResource PanelSeparatorBrush}" Margin="0,5,0,5" />
+                                            <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                             <ContentControl x:Name="NewsViewer_NewsViewerControl" />
                                         </StackPanel>
                                         <!--#endregion -->
