--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -14,18 +14,16 @@
                         <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}">
                             <StackPanel Name="PART_PanelHost"
                                     d:DataContext="{x:Static DesignMainViewModel.DesignSelectedGameIntance}">
-
-                                <Grid Width="{Settings GridItemWidth}"
-                                      Height="{Settings GridItemHeight}">
-                                    <Image Name="PART_ImageCover"
-                                           RenderOptions.BitmapScalingMode="Fant" StretchDirection="Both"
-                                           HorizontalAlignment="Center" VerticalAlignment="Top"
-                                           Stretch="{Settings CoverArtStretch}" />
-
-                                    <Image VerticalAlignment="Top" HorizontalAlignment="Center"
-                                           RenderOptions.BitmapScalingMode="Fant"
-                                           Opacity="{DynamicResource GridViewCoverLibraryBannerOpacity}"
-                                           Stretch="Uniform" StretchDirection="Both" Tag="{DynamicResource GridViewCoverDisplayLibraryBanner}">
+                                <Grid Width="{Settings GridItemWidth}">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    
+                                    <Image Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Center"
+                                       RenderOptions.BitmapScalingMode="Fant"
+                                       Opacity="{DynamicResource GridViewCoverLibraryBannerOpacity}"
+                                       Stretch="Uniform" StretchDirection="Both" Tag="{DynamicResource GridViewCoverDisplayLibraryBanner}">
                                         <Image.Style>
                                             <Style TargetType="Image">
                                                 <Setter Property="Source" Value="{x:Null}" />
@@ -211,73 +209,80 @@
                                             </Style>
                                         </Image.Style>
                                     </Image>
-                                    
-                                    <Border Background="#99000000" x:Name="TextGameName" Visibility="Collapsed">
-                                        <TextBlock Text="{Binding DisplayName}"
-                                                   TextWrapping="Wrap" Margin="5"
-                                                   Style="{StaticResource BaseTextBlockStyle}"
-                                                   TextTrimming="CharacterEllipsis" TextAlignment="Center"
-                                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    </Border>
-                                    <Border Background="#000000" x:Name="BorderMouseOver" Visibility="Collapsed" IsHitTestVisible="False" Opacity="0.60"/>
-                                    <Border Name="ShineBackground" Tag="False" IsHitTestVisible="False"
-                                            Style="{DynamicResource AnimatedCoverShineBackground}" />
-                                    <TextBlock Name="EnableHighlightAnimation" Visibility="Collapsed"
-                                               Tag="{DynamicResource GridViewEnableCoverShineAnimation}" />
-                                    <DockPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5">
-                                        <TextBlock Text="&#xF000;" Foreground="#67b3ff"
-                                                   Opacity="0.75" FontSize="16"
-                                                   Margin="3,0,0,0"
-                                                   VerticalAlignment="Center"
-                                                   DockPanel.Dock="Right"
-                                                   FontFamily="{DynamicResource FontIcoFont}"
-                                                   Tag="{DynamicResource GridViewLibraryGameShowFavorite}">
-                                            <TextBlock.Style>
-                                                <Style TargetType="TextBlock" >
-                                                    <Setter Property="Visibility" Value="Collapsed" />
-                                                    <Style.Triggers>
-                                                        <MultiDataTrigger>
-                                                            <MultiDataTrigger.Conditions>
-                                                                <Condition Binding="{Binding Favorite}" Value="True" />
-                                                                <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True" />
-                                                            </MultiDataTrigger.Conditions>
-                                                            <Setter Property="Visibility" Value="Visible" />
-                                                        </MultiDataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </TextBlock.Style>
-                                        </TextBlock>
-                                        <Border DockPanel.Dock="Right" CornerRadius="8" Background="{DynamicResource OpaqueGrayHighlightBrush}">
-                                            <ContentControl x:Name="DuplicateHider_SourceSelector1" RenderOptions.BitmapScalingMode="Fant" Visibility="Visible" MaxHeight="25"/>
+
+                                    <Image Name="PART_ImageCover" Grid.Row="1" Height="{Settings GridItemHeight}"
+                                           RenderOptions.BitmapScalingMode="Fant" StretchDirection="Both"
+                                           HorizontalAlignment="Center" VerticalAlignment="Top"
+                                           Stretch="{Settings CoverArtStretch}" />
+
+                                    <Grid Grid.RowSpan="2">
+                                        <Border Background="#99000000" x:Name="TextGameName" Visibility="Collapsed">
+                                            <TextBlock Text="{Binding DisplayName}"
+                                                       TextWrapping="Wrap" Margin="5"
+                                                       Style="{StaticResource BaseTextBlockStyle}"
+                                                       TextTrimming="CharacterEllipsis" TextAlignment="Center"
+                                                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                         </Border>
-                                    </DockPanel>
-                                    <Viewbox VerticalAlignment="Bottom" HorizontalAlignment="Left"
-                                             Name="GameControls">
-                                        <Border Margin="5,50,30,5"
-                                            CornerRadius="{DynamicResource ControlCornerRadiusSmall}" Padding="1">
-                                            <Border.Style>
-                                                <Style TargetType="Border">
-                                                    <Setter Property="Background" Value="#87000000" />
-                                                    <Setter Property="Opacity" Value="0.1" />
-                                                    <Style.Triggers>
-                                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type StackPanel}}, Path=IsMouseOver}" Value="True">
-                                                            <Setter Property="Opacity" Value="0.40" />
-                                                        </DataTrigger>
-                                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsMouseOver}" Value="True">
-                                                            <Setter Property="Background" Value="#A6000000" />
-                                                            <Setter Property="Opacity" Value="1.0" />
-                                                        </DataTrigger>
-                                                    </Style.Triggers>
-                                                </Style>
-                                            </Border.Style>
-                                            <StackPanel Orientation="Horizontal">
-                                                <Button Height="24" Width="24" Name="PART_ButtonPlay" Margin="0" VerticalAlignment="Center"
-                                                FontFamily="{StaticResource FontIcoFont}" Tag="Installed" Style="{DynamicResource ButtonPlay}" />
-                                                <Button Height="24" Width="24" Name="PART_ButtonInfo" Style="{DynamicResource InfoButton}"
-                                                Margin="3,0,0,0" VerticalAlignment="Center" FontFamily="{StaticResource FontIcoFont}" />
-                                            </StackPanel>
-                                        </Border>
-                                    </Viewbox>
+                                        <Border Background="#000000" x:Name="BorderMouseOver" Visibility="Collapsed" IsHitTestVisible="False" Opacity="0.60"/>
+                                        <Border Name="ShineBackground" Tag="False" IsHitTestVisible="False"
+                                                Style="{DynamicResource AnimatedCoverShineBackground}" />
+                                        <TextBlock Name="EnableHighlightAnimation" Visibility="Collapsed"
+                                                   Tag="{DynamicResource GridViewEnableCoverShineAnimation}" />
+                                        <DockPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5">
+                                            <TextBlock Text="&#xF000;" Foreground="#67b3ff"
+                                                       Opacity="0.75" FontSize="16"
+                                                       Margin="3,0,0,0"
+                                                       VerticalAlignment="Center"
+                                                       DockPanel.Dock="Right"
+                                                       FontFamily="{DynamicResource FontIcoFont}"
+                                                       Tag="{DynamicResource GridViewLibraryGameShowFavorite}">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock" >
+                                                        <Setter Property="Visibility" Value="Collapsed" />
+                                                        <Style.Triggers>
+                                                            <MultiDataTrigger>
+                                                                <MultiDataTrigger.Conditions>
+                                                                    <Condition Binding="{Binding Favorite}" Value="True" />
+                                                                    <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True" />
+                                                                </MultiDataTrigger.Conditions>
+                                                                <Setter Property="Visibility" Value="Visible" />
+                                                            </MultiDataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+                                            </TextBlock>
+                                            <Border DockPanel.Dock="Right" CornerRadius="8" Background="{DynamicResource OpaqueGrayHighlightBrush}">
+                                                <ContentControl x:Name="DuplicateHider_SourceSelector1" RenderOptions.BitmapScalingMode="Fant" Visibility="Visible" MaxHeight="25"/>
+                                            </Border>
+                                        </DockPanel>
+                                        <Viewbox VerticalAlignment="Bottom" HorizontalAlignment="Left"
+                                                 Name="GameControls">
+                                            <Border Margin="5,50,30,5"
+                                                    CornerRadius="{DynamicResource ControlCornerRadiusSmall}" Padding="1">
+                                                <Border.Style>
+                                                    <Style TargetType="Border">
+                                                        <Setter Property="Background" Value="#87000000" />
+                                                        <Setter Property="Opacity" Value="0.1" />
+                                                        <Style.Triggers>
+                                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type StackPanel}}, Path=IsMouseOver}" Value="True">
+                                                                <Setter Property="Opacity" Value="0.40" />
+                                                            </DataTrigger>
+                                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsMouseOver}" Value="True">
+                                                                <Setter Property="Background" Value="#A6000000" />
+                                                                <Setter Property="Opacity" Value="1.0" />
+                                                            </DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </Border.Style>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Button Height="24" Width="24" Name="PART_ButtonPlay" Margin="0" VerticalAlignment="Center"
+                                                            FontFamily="{StaticResource FontIcoFont}" Tag="Installed" Style="{DynamicResource ButtonPlay}" />
+                                                    <Button Height="24" Width="24" Name="PART_ButtonInfo" Style="{DynamicResource InfoButton}"
+                                                            Margin="3,0,0,0" VerticalAlignment="Center" FontFamily="{StaticResource FontIcoFont}" />
+                                                </StackPanel>
+                                            </Border>
+                                        </Viewbox>
+                                    </Grid>
                                 </Grid>
                                 <Border x:Name="ShowGameNameBorder" Background="Transparent">
                                     <TextBlock x:Name="ShowGameName" Text="{Binding DisplayName}"
