GridView: Show generic library banner for games with a library that does not have a specific banner

--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -20,10 +20,10 @@
                                         <RowDefinition Height="Auto" />
                                     </Grid.RowDefinitions>
                                     
-                                    <Image Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Center"
-                                       RenderOptions.BitmapScalingMode="Fant"
-                                       Opacity="{DynamicResource GridViewCoverLibraryBannerOpacity}"
-                                       Stretch="Uniform" StretchDirection="Both" Tag="{DynamicResource GridViewCoverDisplayLibraryBanner}">
+                                    <Image x:Name="LibraryBanner" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Center"
+                                           RenderOptions.BitmapScalingMode="Fant"
+                                           Opacity="{DynamicResource GridViewCoverLibraryBannerOpacity}"
+                                           Stretch="Uniform" StretchDirection="Both" Tag="{DynamicResource GridViewCoverDisplayLibraryBanner}">
                                         <Image.Style>
                                             <Style TargetType="Image">
                                                 <Setter Property="Source" Value="{x:Null}" />
@@ -210,6 +210,28 @@
                                         </Image.Style>
                                     </Image>
 
+                                    <Image Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Center"
+                                           RenderOptions.BitmapScalingMode="Fant"
+                                           Opacity="{DynamicResource GridViewCoverLibraryBannerOpacity}"
+                                           Stretch="Uniform" StretchDirection="Both" Tag="{DynamicResource GridViewCoverDisplayLibraryBanner}">
+                                        <Image.Style>
+                                            <Style TargetType="Image">
+                                                <Setter Property="Source" Value="{x:Null}" />
+                                                <Setter Property="Visibility" Value="Collapsed" />
+                                                <Style.Triggers>
+                                                    <MultiDataTrigger>
+                                                        <MultiDataTrigger.Conditions>
+                                                            <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True" />
+                                                            <Condition Binding="{Binding ElementName=LibraryBanner, Path=Visibility}" Value="Collapsed" />
+                                                        </MultiDataTrigger.Conditions>
+                                                        <Setter Property="Source" Value="{StaticResource UnknownLibraryBannerBitmap}" />
+                                                        <Setter Property="Visibility" Value="Visible" />
+                                                    </MultiDataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </Image.Style>
+                                    </Image>
+                                    
                                     <Image Name="PART_ImageCover" Grid.Row="1" Height="{Settings GridItemHeight}"
                                            RenderOptions.BitmapScalingMode="Fant" StretchDirection="Both"
                                            HorizontalAlignment="Center" VerticalAlignment="Top"
