Grid View: Added ThemeModifier option to place Description at the bottom (After extensions sections). Disabled by default.

--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -290,8 +290,18 @@
                                                      Margin="-1,0,-1,0" Padding="0"/>
                                         </StackPanel>
 
-                                        <StackPanel Name="PART_ElemDescription" DockPanel.Dock="Top"
+                                        <StackPanel Name="PART_ElemDescription" Tag="{DynamicResource GridViewPlaceDescriptionAtBottom}"
                                                     Margin="5,25,5,0">
+                                            <StackPanel.Style>
+                                                <Style TargetType="{x:Type StackPanel}">
+                                                    <Setter Property="DockPanel.Dock" Value="Top" />
+                                                    <Style.Triggers>
+                                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="True">
+                                                            <Setter Property="DockPanel.Dock" Value="Bottom" />
+                                                        </DataTrigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </StackPanel.Style>
                                             <TextBlock Text="{DynamicResource LOCGameDescriptionTitle}"
                                                        Style="{DynamicResource BaseTextBlockStyle}" />
                                             <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
