Grid View: Made glow border of playing games static. Can be enabled with ThemeModifier extension

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -19,7 +19,7 @@
     <sys:Boolean x:Key="GridViewDisplayGameNameIfLogoVisible">True</sys:Boolean>
     <Visibility x:Key="GridViewCoverSubtitleVisibility">Collapsed</Visibility>
     <sys:Boolean x:Key="GridViewCoverDisplayLibraryBanner">False</sys:Boolean>
-    <sys:Boolean x:Key="GridViewEnablePlayingBorderAnimation">False</sys:Boolean>
+    <sys:Boolean x:Key="GridViewEnablePlayingGlowBorder">False</sys:Boolean>
     <sys:Boolean x:Key="GridViewPlaceDescriptionAtBottom">False</sys:Boolean>
     <sys:Double x:Key="GridViewCoverLibraryBannerOpacity">1.0</sys:Double>
     <!--region end-->
@@ -396,6 +396,7 @@
                     Opacity="1" popt:Freeze="True"/>
     <ImageBrush x:Key="WhiteNoiseBrush" ImageSource="{ThemeFile 'Images/white_noise.png'}" TileMode="Tile" Viewport="0,0,100,100" ViewportUnits="Absolute"
                     Opacity="1.0" popt:Freeze="True"/>
+    <BitmapImage x:Key="InnerGlowBitmap" UriSource="{ThemeFile 'Images/innerglow.png'}" popt:Freeze="True" CacheOption="OnLoad" />
     
     <sys:Int32 x:Key="BannersBitmapDecodeWidth">300</sys:Int32>
     <sys:Int32 x:Key="BannersBitmapDecodeHeight">50</sys:Int32>
