--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -527,17 +527,14 @@
                                             </Border>
                                         </DockPanel>
                                         <Viewbox VerticalAlignment="Bottom" HorizontalAlignment="Left"
-                                                 Name="GameControls">
+                                                 Name="GameControls" Visibility="Collapsed">
                                             <Border Margin="5,50,30,5"
                                                     CornerRadius="{DynamicResource ControlCornerRadiusSmall}" Padding="1">
                                                 <Border.Style>
                                                     <Style TargetType="Border">
                                                         <Setter Property="Background" Value="#87000000" />
-                                                        <Setter Property="Opacity" Value="0.1" />
+                                                        <Setter Property="Opacity" Value="0.40" />
                                                         <Style.Triggers>
-                                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type StackPanel}}, Path=IsMouseOver}" Value="True">
-                                                                <Setter Property="Opacity" Value="0.40" />
-                                                            </DataTrigger>
                                                             <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsMouseOver}" Value="True">
                                                                 <Setter Property="Background" Value="#A6000000" />
                                                                 <Setter Property="Opacity" Value="1.0" />
@@ -593,6 +590,9 @@
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Visibility" Value="Visible" TargetName="GameControls"/>
+                        </Trigger>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
                                 <Condition Binding="{Binding ElementName=EnableHighlightAnimation, Path=Tag}" Value="True" />
